--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	
 		<meta charset="utf-8">
-		<title> SmartAdmin (AngularJS)</title>
+		<title> Digimenu </title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -103,7 +103,7 @@
 	<body data-smart-device-detect
 		data-smart-fast-click
 		data-smart-layout
-		data-smart-page-title="SmartAdmin AngularJS">
+		data-smart-page-title="Digimenu">
 
 		<!-- ui-view container -->
 
