--- a/app/dashboard/projects/recent-projects.tpl.html
+++ b/app/dashboard/projects/recent-projects.tpl.html
@@ -1,8 +1,9 @@
 <div class="project-context hidden-xs dropdown" dropdown>
 
-    <span class="label">{{getWord('Projects')}}:</span>
-    <span class="project-selector dropdown-toggle" data-toggle="dropdown">{{getWord('Recent projects')}} <i ng-if="projects.length"
-            class="fa fa-angle-down"></i></span>
+    <span class="label">{{getWord('Restaurants')}}:</span>
+    <span class="project-selector dropdown-toggle" data-toggle="dropdown">{{getWord('Recent Restaurants')}}
+        <i ng-if="projects.length" class="fa fa-angle-down"></i>
+    </span>
 
     <ul class="dropdown-menu" ng-if="projects.length">
         <li ng-repeat="project in projects">
