--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="no-js">
+<html lang="en-us" class="no-js custom-scroll">
 	<head>
 	
 		<meta charset="utf-8">
